--- a/index/styles.css
+++ b/index/styles.css
@@ -11,15 +11,22 @@ body {
 
 h3 {
     margin-top: 10%;
+    margin-bottom: 2%;
     font-size: 3em;
     text-align: center; 
-    margin-bottom: 0%;
     text-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3); /* subtle shadow */
     transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
+
+.links {
+    text-align: center;
+    margin-left: 10%;
+    margin-right: 10%;
+}
+
 h2 {
-    margin-top: 5%;
-    margin-bottom: 5%;
+    margin-top: 4%;
+    margin-bottom: 3%;
     font-size: 2em;
     text-align: center; 
 }
@@ -41,16 +48,26 @@ p {
     row-gap: 20%;
 }
 
-#tictactoeImage img, #intelligenceCheckImage img {
-    width: 100%; /* Makes the image fit its container */
-    height: auto; /* Maintains aspect ratio */
-    display: block; /* Removes default inline spacing */
-    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3); /* subtle shadow */
+.image-text-container img {
+    width: 100%;
+    height: auto;
+    display: block;
+    margin-bottom: 2%;
+    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3);
     transition: transform 0.3s ease, box-shadow 0.3s ease;
-    border-radius: 8px; 
+    border-radius: 8px;
 }
 
-#tictactoeImage img:hover, #intelligenceCheckImage img:hover {
-    transform: translateY(-5px); /* moves image up slightly */
-    box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.5); /* deeper shadow on hover */
+.image-text-container img:hover {
+    transform: translateY(-5px);
+    box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.5);
+}
+
+.image-text-container p {
+    font-size: 1em;
+    color: #333;
+    margin: 0;
+    padding: 10px;
+    background-color: #82e0aa;
+    border-radius: 8px;
 }
