moved font inside css folder

--- a/index/styles.css
+++ b/index/styles.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: calSans;
-    src: url(../font/CalSans-Regular.ttf);
+    src: url(CalSans-Regular.ttf);
     font-weight: bold;
 }
 
