--- a/index/styles.css
+++ b/index/styles.css
@@ -38,12 +38,12 @@ p {
 }
 
 .container {
-    width: 60%;
+    width: 90%;
     height: auto;
     margin-left: auto;
     margin-right: auto;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: repeat(3, 1fr);
     column-gap: 10%;
     row-gap: 5%;
 }
